// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anchor-less <Consumer /> 1`] = `"Attempted to render a <Consumer /> without an <Anchor />"`;

exports[`anchor-less <Provider /> 1`] = `"Attempted to render a <Provider /> without an <Anchor />"`;

exports[`lifecycle 1`] = `
<div
  className="root"
>
  <div
    className="consumer"
  >
    <div
      className="jump"
    />
  </div>
  <div
    className="provider"
  />
</div>
`;

exports[`lifecycle 2`] = `
<div
  className="root"
>
  <div
    className="consumer"
  >
    <div
      className="jump-update"
    />
  </div>
  <div
    className="provider"
  />
</div>
`;

exports[`lifecycle 3`] = `
<div
  className="root"
>
  <div
    className="consumer"
  />
  <div
    className="provider"
  />
</div>
`;

exports[`multiple <Provider /> 1`] = `"Tried to use an already-full Jumpgate. Did you render multiple <Provider /> ?"`;

exports[`multiple <Provider /> 2`] = `"Tried to update an empty Jumpgate. Did you render multiple <Provider /> ?"`;
